updating first lecture slides

--- a/lecture-01.ipynb
+++ b/lecture-01.ipynb
@@ -103,7 +103,9 @@
       "\n",
       "* Readily available and suitable for use on high-performance computing clusters. \n",
       "\n",
-      "* No license costs and license server issues."
+      "* Open source:\n",
+      "    * no license costs and license server issues.\n",
+      "    * open means work can be shared more easily (reproducable science and all that)"
      ]
     },
     {
