--- a/lecture-01.ipynb
+++ b/lecture-01.ipynb
@@ -28,15 +28,15 @@
      },
      "source": [
       "* Python is a modern, general-purpose, object-oriented, high-level programming language.\n",
-      "* Clean and simple language: Easy-to-read and intuitive code, easy-to-learn minimalistic syntax, maintainability scales well with size of projects.\n",
-      "* Expressive language: Fewer lines of code, fewer bugs, easier to maintain.\n",
+      "* **Clean and simple language:** Easy-to-read and intuitive code, easy-to-learn minimalistic syntax, maintainability scales well with size of projects.\n",
+      "* **Expressive language:** Fewer lines of code, fewer bugs, easier to maintain.\n",
       "\n",
       "Technical details:\n",
       "\n",
-      "* Dynamically typed: No need to define the type of variables, function arguments or return types.\n",
-      "* Garbage collection: No need to explicitly allocate and deallocate memory for variables and data arrays.\n",
-      "* Interpreted: No need to compile the code. The Python interpreter reads and executes the python code directly.\n",
-      "* Cross platform\n",
+      "* **Dynamically typed:** No need to define the type of variables, function arguments or return types.\n",
+      "* **Garbage collection:** No need to explicitly allocate and deallocate memory for variables and data arrays.\n",
+      "* **Interpreted:** No need to compile the code. The Python interpreter reads and executes the python code directly.\n",
+      "* **Cross platform**\n",
       "\n"
      ]
     },
@@ -62,18 +62,18 @@
      "source": [
       "Advantages:\n",
       "\n",
-      "* The main advantage is ease of programming, minimizing the time required to develop, debug and maintain the code.\n",
-      "* Well designed language that encourages many good programming practices:\n",
-      "    * Modular and object-oriented programming, good system for packaging and re-use of code.\n",
+      "* The main advantage is **ease of programming**, minimizing the time required to develop, debug and maintain the code.\n",
+      "* **Well designed language** that encourages many good programming practices:\n",
+      "    * **Modular and object-oriented** programming, good system for packaging and re-use of code.\n",
       "    * Documentation tightly integrated with the code.\n",
-      "* A large standard library, and a large collection of add-on packages.\n",
+      "* A **large standard library**, and a large collection of add-on packages.\n",
       "* Interface to many other languages and libraries (no lock-in)\n",
       "\n",
       "Disadvantages:\n",
       "\n",
       "* Since Python is an interpreted and dynamically typed programming language, the execution of python code can be slow compared to compiled statically typed programming languages, such as C and Fortran.\n",
       "* Somewhat decentralized, with different environment, packages and documentation spread out at different places. Can make it harder to get started.\n",
-      "* So far there is no equivalent to Simulink\n"
+      "* So far there is no equivalent to the Matlab/Simulink combo\n"
      ]
     },
     {
@@ -164,7 +164,8 @@
       "* General introduction: the scientific Python ecosystem\n",
       "* What about Python 2 and 3?\n",
       "* Three hands on examples on how we use Python\n",
-      "* Questions"
+      "* Questions Code Academy exercises\n",
+      "* More Code Academy Exercises"
      ]
     },
     {
@@ -392,12 +393,14 @@
       "* Python 2 and Python 3 are not compatible\n",
       "* Many scientific packages support Python 3 today, but not all of them yet\n",
       "* If you still dependent on Python 2 packeges, do not use Python 3...yet\n",
-      "* Python 3 is the future!\n",
+      "* New Python development only for 3, it is the future!\n",
       "\n",
       "\n",
       "* Some important differences:\n",
       "    * integer division in Python 2: 11/2 = 5\n",
       "    * integer division in Python 3: 11/2 = 5.5\n",
+      "    * strings are ascii in Python 2\n",
+      "    * strings are unicode in Python 3\n",
       "    * print statements: \n",
       "```python\n",
       "print \"heho\"\n",
@@ -432,8 +435,52 @@
       "\n",
       "* [2to3](http://docs.python.org/2/library/2to3.html): automated Python 2 to 3 code translation\n",
       "* [How to Support both Python 2 and 3](http://ondrejcertik.blogspot.dk/2013/08/how-to-support-both-python-2-and-3.html)\n",
-      "* [Porting to Python 3: Redux](http://lucumr.pocoo.org/2013/5/21/porting-to-python-3-redux/), which tiggered an insightfull discussion on [Hacker News](https://news.ycombinator.com/item?id=5742482)"
+      "* [Porting to Python 3: Redux](http://lucumr.pocoo.org/2013/5/21/porting-to-python-3-redux/), which tiggered an insightfull discussion on [Hacker News](https://news.ycombinator.com/item?id=5742482)\n",
+      "* example: compatibility layer to support Python 2 and 3 with [Spyder](http://code.google.com/p/spyderlib/source/browse/spyderlib/py3compat.py)"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print len('\u00f8\u00f8')\n",
+      "print 4/5"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "4\n",
+        "0\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from __future__ import division, print_function, absolute_import, unicode_literals\n",
+      "print(len('\u00f8\u00f8'))\n",
+      "print(4/5)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "2\n",
+        "0.8\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
