updating how to numpy notebook

--- a/how-to-numpy.ipynb
+++ b/how-to-numpy.ipynb
@@ -24,10 +24,13 @@
      "collapsed": false,
      "input": [
       "import numpy as np\n",
-      "aa = np.random.rand(100,200,5)\n",
-      "i = np.arange(3,100,3)\n",
-      "j = np.arange(9,200,5)\n",
-      "k = [1,2]\n",
+      "d1, d2, d3 = 1000, 2000, 50\n",
+      "s0, s1, sd0 = 10, 700, 10\n",
+      "s2, s3, sd1 = 8, 1000, 7\n",
+      "aa = np.random.rand(d1,d2,d3)\n",
+      "i = np.arange(s0,s1,sd0)\n",
+      "j = np.arange(s2,s3,sd1)\n",
+      "k = [1,2, 10]\n",
       "\n",
       "# method 1: fancy indexing per dimension\n",
       "aai = aa[i,:,:]\n",
@@ -37,7 +40,7 @@
       "aaijk1 = aa[i,:,:][:,j,:][:,:,k]\n",
       "\n",
       "# method 2: slicing\n",
-      "aaijk2 = aa[3:100:3,9:200:5,[1,2]]\n",
+      "aaijk2 = aa[s0:s1:sd0, s2:s3:sd1, k]\n",
       "\n",
       "# method 3: fancy indexing\n",
       "aaijk3 = aa[np.ix_(i,j,k)]"
@@ -69,7 +72,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -91,7 +94,7 @@
        "stream": "stdout",
        "text": [
         "method 1: fancy indexing for each dimension seperately\n",
-        "1000 loops, best of 3: 407 \u00b5s per loop"
+        "10 loops, best of 3: 73.8 ms per loop"
        ]
       },
       {
@@ -100,7 +103,7 @@
        "text": [
         "\n",
         "method 2: slicing\n",
-        "10000 loops, best of 3: 34.2 \u00b5s per loop"
+        "10000 loops, best of 3: 33 \u00b5s per loop"
        ]
       },
       {
@@ -109,7 +112,7 @@
        "text": [
         "\n",
         "method 3: fancy indexing\n",
-        "10000 loops, best of 3: 164 \u00b5s per loop"
+        "1000 loops, best of 3: 1.59 ms per loop"
        ]
       },
       {
@@ -120,7 +123,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
