notebook presentation updated

--- a/lesson 2/lecture-02.ipynb
+++ b/lesson 2/lecture-02.ipynb
@@ -367,7 +367,11 @@
       "print prime_list(100)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "notes"
+      }
+     },
      "outputs": []
     },
     {
@@ -381,7 +385,11 @@
       "print prime_list(100)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "notes"
+      }
+     },
      "outputs": []
     },
     {
@@ -394,14 +402,14 @@
      "source": [
       "#Programming paradigmes in Python\n",
       "##Functional programming - functions\n",
-      "- __map__(*function, sequency*) -> list (python 3: generator)\n",
+      "- __map__(*function, sequence*) -> list (python 3: generator)\n",
       "    - Apply function to each element in sequence\n",
       "- __filter__(*function, sequence*) -> list (python 3: generator)\n",
       "    - Filter sequence to contain elements where function(element)==True only\n",
       "- __reduce__(*function, sequence*) -> object\n",
       "    - Reduce sequence to single value by a function f(x,y) -> z, i.e.\n",
       "      f(s[0], f(s[1], f(s[3], s[4])))\n",
-      "    - Ex: reduce (sum, [2,4,6]) -> sum(2, sum(4, 6)) -> sum(2,10) -> 12"
+      "    - Ex: `reduce(sum, [2,4,6])` -> sum(2, sum(4, 6)) -> sum(2,10) -> 12"
      ]
     },
     {
@@ -738,31 +746,46 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#refactor\n",
       "pow = lambda x: x**2\n",
       "print pow(4)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "notes"
+      }
+     },
      "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#refactor\n",
       "print (lambda x: x**2)(5)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "notes"
+      }
+     },
      "outputs": []
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "#example\n",
       "print  map(lambda x: x**2, range(4))"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "notes"
+      }
+     },
      "outputs": []
     },
     {
@@ -808,7 +831,7 @@
       "In order to benefit from `generator_map` being a generator, `is_primes` must return as soon as _any_ number that is divisible by x is found.\n",
       "\n",
       "- Modify `is_prime_any` to use `any` instead of `all`\n",
-      "- Test thoroughly, e.g. p=[3..100], map_= [map, generator_map]. Without code duplication!!!"
+      "- Note how it is tested without code duplication!!!"
      ]
     },
     {
@@ -821,8 +844,9 @@
       "def is_prime_any(p,map_=map):\n",
       "    return all(map_(lambda x : p%x, xrange(2,p))) #Modify this line\n",
       "\n",
-      "\n",
-      "assert is_prime_all(7)==is_prime_any(7) #Modify here"
+      "for p in range(3,100):\n",
+      "    for map_ in [map, generator_map]:\n",
+      "        assert is_prime_all(p)==is_prime_any(p, map_)"
      ],
      "language": "python",
      "metadata": {},
@@ -971,7 +995,26 @@
        "slide_type": "slide"
       }
      },
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "I am:  2, prime: True,\tprev prime: --\n",
+        "I am:  3, prime: True,\tprev prime: 2\n",
+        "I am:  4, prime: False,\tprev prime: 3\n",
+        "I am:  5, prime: True,\tprev prime: 3\n",
+        "I am:  6, prime: False,\tprev prime: 5\n",
+        "I am:  7, prime: True,\tprev prime: 5\n",
+        "I am:  8, prime: False,\tprev prime: 7\n",
+        "I am:  9, prime: False,\tprev prime: 7\n",
+        "I am: 10, prime: False,\tprev prime: 7\n",
+        "I am: 11, prime: True,\tprev prime: 7\n",
+        "I am: 12, prime: False,\tprev prime: 11\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -1028,19 +1071,50 @@
        "slide_type": "notes"
       }
      },
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "I am:  2, prime: True,\tprevious prime: --\n",
+        "I am:  3, prime: True,\tprevious prime: 2\n",
+        "I am:  4, prime: False,\tprevious prime: 3\n",
+        "I am:  5, prime: True,\tprevious prime: 3\n",
+        "I am:  6, prime: False,\tprevious prime: 5\n",
+        "I am:  7, prime: True,\tprevious prime: 5\n",
+        "I am:  8, prime: False,\tprevious prime: 7\n",
+        "I am:  9, prime: False,\tprevious prime: 7\n",
+        "I am: 10, prime: False,\tprevious prime: 7\n",
+        "I am: 11, prime: True,\tprevious prime: 7\n",
+        "I am: 12, prime: False,\tprevious prime: 11\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
      "outputs": []
     },
     {
      "cell_type": "markdown",
-     "metadata": {},
+     "metadata": {
+      "slideshow": {
+       "slide_type": "slide"
+      }
+     },
      "source": [
       "##Exercise Magic number\n",
-      "Make a class `MInt` that satisfies the assert statements, i.e:\n",
+      "Make a class `MagicInt` that satisfies the assert statements, i.e:\n",
       "\n",
       "- Is a int\n",
       "- Makes 2 + 2 = 5\n",
-      "- Result of addition is also a MInt object\n",
-      "- Lets len() return the number of digits\n",
+      "- Result of addition is also a MagicInt object\n",
+      "- Lets len(magicInt) return the number of digits\n",
       "- Has a property `prime` that returns `True` the if it is a prime.\n",
       "- Allows the user to set the `prime` property manually"
      ]
@@ -1049,14 +1123,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "class MInt(int):\n",
-      "    _prime = None\n",
+      "class MagicInt(...\n",
       "    \n",
-      "    ...\n",
       "        \n",
       "#Do not modify code below\n",
-      "two = MInt(2)\n",
-      "m127 = MInt(127)\n",
+      "two = MagicInt(2)\n",
+      "m127 = MagicInt(127)\n",
       "\n",
       "# a int\n",
       "assert isinstance(two, int)\n",
@@ -1066,13 +1138,13 @@
       "assert two + 3 == 5\n",
       "\n",
       "#Result of addition is also a MInt object\n",
-      "assert isinstance(two + two, MInt)\n",
-      "assert isinstance(two + 3, MInt)\n",
+      "assert isinstance(two + two, MagicInt)\n",
+      "assert isinstance(two + 3, MagicInt)\n",
       "\n",
       "# len() return the number of digits\n",
       "assert len(two)==1\n",
       "assert len(m127) == 3\n",
-      "assert len(MInt(-127)) == 3\n",
+      "assert len(MagicInt(-127)) == 3\n",
       "\n",
       "# property prime that returns True the if it is a prime\n",
       "assert m127.prime\n",
@@ -1087,14 +1159,6 @@
       "\n",
       "  \n"
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
