updating numpy introduction for lesson 2

--- a/lesson 2/how-to-numpy.ipynb
+++ b/lesson 2/how-to-numpy.ipynb
@@ -23,11 +23,16 @@
       "\n",
       "* [SciPy Lecture Notes](http://scipy-lectures.github.io/) (various Python developers)\n",
       "* [scipy array tip sheed](http://pages.physics.cornell.edu/~myers/teaching/ComputationalMethods/python/arrays.html) (Physics at Cornell University)\n",
-      "* http://wiki.scipy.org/Tentative_NumPy_Tutorial\n",
+      "* http://wiki.scipy.org/Tentative_NumPy_Tutorial (somewhat older page but still contains usefull examples)\n",
       "\n",
       "For Matlab users, following reference material might com in handy:\n",
       "\n",
-      "* [NumPy for Matlab Users](http://wiki.scipy.org/NumPy_for_Matlab_Users)"
+      "* [NumPy for Matlab Users](http://wiki.scipy.org/NumPy_for_Matlab_Users)\n",
+      "\n",
+      "Official documentation:\n",
+      "\n",
+      "* [NumPy User Guide](http://docs.scipy.org/doc/numpy/user/index.html)\n",
+      "* [NumPy and SciPy documentation pages](http://docs.scipy.org/doc/)"
      ]
     },
     {
@@ -77,7 +82,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -391,6 +396,13 @@
      "prompt_number": 16
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Selecting last element, slicing, views, copies, in place operations, linspace"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
@@ -419,18 +431,20 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Creating and printing arrays might work a little different than expected:"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "a1 = np.array([[111,121],[211,221]])\n",
-      "print p1\n",
+      "print a1\n",
       "a2 = np.array([[112, 122],[212,222]])\n",
-      "print p1\n",
-      "a3 = np.dstack( (a1, a2 ))\n",
-      "a4 = np.array([ [[111,112],[121,122]], [[211,212],[221,222]] ])\n",
-      "a5 = np.array([ [np.array([111,112]),[121,122]], [[211,212],[221,222]] ])\n",
-      "print a3 == a4\n",
-      "print a3[1,0,0]"
+      "print a2\n"
      ],
      "language": "python",
      "metadata": {},
@@ -454,6 +468,53 @@
       }
      ],
      "prompt_number": 23
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "What if we would create a 3D array, where a2 would be stacked along a third dimension:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a3 = np.dstack((a1, a2))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a4 = np.array([ [[111,112],[121,122]], [[211,212],[221,222]] ])\n",
+      "a5 = np.array([ [np.array([111,112]),[121,122]], [[211,212],[221,222]] ])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print a3 == a4\n",
+      "print a3[1,0,0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -545,6 +606,7 @@
       "aaijk1 = aa[i,:,:][:,j,:][:,:,k]\n",
       "\n",
       "# method 2: slicing on dimensions 1,2, and fancy indexing on the last dimension\n",
+      "# slicing: inclusive lower boundary, exclusive upper boundary\n",
       "aaijk2 = aa[i0:i1:istep, j0:j1:jstep, k]\n",
       "\n",
       "# method 3: fancy indexing\n",
@@ -613,6 +675,350 @@
      "source": [
       "Slicing is the clear winner, because we create views and not copies of the arrays."
      ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "I/O with NumPy arrays"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = np.random.rand(10, 5)\n",
+      "b = np.ones( (10,2) )\n",
+      "c = np.zeros( (5,5) )\n",
+      "\n",
+      "np.savetxt('savetxt', a)\n",
+      "np.savez('savez', a, b, c) # NumPy binary\n",
+      "np.save('save', a) # NumPy binary"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "And to load the saved arrays: use loadtxt, loads, load"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.loadtxt('savetxt')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "array([[ 0.58951463,  0.25364097,  0.22872002,  0.50496593,  0.63408619],\n",
+        "       [ 0.94506257,  0.58750057,  0.60338287,  0.23230774,  0.6832449 ],\n",
+        "       [ 0.44313992,  0.26718261,  0.89882027,  0.89599165,  0.05243552],\n",
+        "       [ 0.60607946,  0.02249345,  0.41245453,  0.37303377,  0.76568748],\n",
+        "       [ 0.03469898,  0.21175471,  0.96323066,  0.39655602,  0.6500778 ],\n",
+        "       [ 0.74975727,  0.10758864,  0.81351876,  0.56340434,  0.89108878],\n",
+        "       [ 0.73585457,  0.86550601,  0.87664468,  0.7487025 ,  0.02304955],\n",
+        "       [ 0.3630177 ,  0.2815981 ,  0.9985682 ,  0.25157408,  0.10956538],\n",
+        "       [ 0.09280795,  0.64685929,  0.85697407,  0.77609291,  0.56018828],\n",
+        "       [ 0.19499422,  0.96372241,  0.62658103,  0.92424868,  0.39157309]])"
+       ]
+      }
+     ],
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "For more complex csv or text files, use numpy.genfromtxt(). For instance, we may be dealing with a fixed-width file, where columns are defined as a given number of characters. In that case, we need to set delimiter to a single integer (if all the columns have the same size) or to a sequence of integers (if columns can have different sizes)."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "fname = 'fixedwidth'\n",
+      "data1 = np.genfromtxt(fname, dtype=None, delimiter=',', comments='#', skiprows=0, skip_header=0, skip_footer=0)\n",
+      "print data1.shape\n",
+      "data1[0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(20,)\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": [
+        "'0.0  1.00000e-02          0.0          0.0  7.50000e-07  7.50000e-07          0.0          0.0  1.00000e+12  2.00000e+12  6.75000e-08  6.75000e-08  1.35000e-07   100.000000   100.000000  9.00000e-04          0.0          0.0          0.0'"
+       ]
+      }
+     ],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data2 = np.genfromtxt(fname, dtype=np.float16, delimiter=13, comments='#', skiprows=0, skip_header=0, skip_footer=0)\n",
+      "print data2.shape\n",
+      "data2[:,0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(20, 19)\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 28,
+       "text": [
+        "array([ 0.        ,  0.16186523,  0.1619873 ,  0.19470215,  0.22729492,\n",
+        "        0.26000977,  0.29248047,  0.32519531,  0.35791016,  0.390625  ,\n",
+        "        0.4230957 ,  0.45581055,  0.48852539,  0.52099609,  0.55371094,\n",
+        "        0.58642578,  0.61914062,  0.65185547,  0.68457031,  0.71679688], dtype=float16)"
+       ]
+      }
+     ],
+     "prompt_number": 28
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "data = np.fromstring(string, dtype=float, count=-1, sep='')\n",
+      "data = np.fromfile(file, dtype=float, count=-1, sep='') # also for binary data\n",
+      "data.tofile(fname)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
+      "More file IO with scipy.io"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "See also official [SciPy tutorial on IO](http://docs.scipy.org/doc/scipy/reference/tutorial/io.html)\n",
+      "\n",
+      "Reading and writing Matlab .mat files"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import scipy.io as sio\n",
+      "constitutive = sio.loadmat('constitutive.mat')\n",
+      "utils = sio.loadmat('utils.mat')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 31,
+       "text": [
+        "dict"
+       ]
+      }
+     ],
+     "prompt_number": 31
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "utils.keys()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 32,
+       "text": [
+        "['utils', '__version__', '__header__', '__globals__']"
+       ]
+      }
+     ],
+     "prompt_number": 32
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "utils['utils'].dtype"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 36,
+       "text": [
+        "dtype([('foldername', 'O'), ('nl_2d', 'O'), ('el_2d', 'O'), ('emat', 'O'), ('matprops', 'O'), ('ne_2d', 'O'), ('nn_2d', 'O'), ('etype_string', 'O'), ('etype', 'O'), ('nnpe_2d', 'O'), ('mdim_2d', 'O'), ('gpoints', 'O'), ('ndiv', 'O'), ('mapnn', 'O'), ('mapel_2d', 'O'), ('mapel4mat', 'O'), ('nmat', 'O'), ('pr_2d', 'O'), ('ElCent', 'O'), ('ElArea', 'O'), ('GQ', 'O'), ('iQ', 'O'), ('jQ', 'O'), ('vQ', 'O'), ('iQm', 'O'), ('jQm', 'O'), ('vQm', 'O'), ('density', 'O')])"
+       ]
+      }
+     ],
+     "prompt_number": 36
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "utils['utils']['foldername'][0][0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 39,
+       "text": [
+        "array([u'BECAS_examples/WTAirfoil'], \n",
+        "      dtype='<U24')"
+       ]
+      }
+     ],
+     "prompt_number": 39
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "utils['utils']['matprops'][0][0]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 41,
+       "text": [
+        "array([[  4.00000000e+10,   1.00000000e+10,   1.00000000e+10,\n",
+        "          4.00000000e+09,   4.00000000e+09,   3.57100000e+09,\n",
+        "          2.80000000e-01,   2.80000000e-01,   4.00000000e-01,\n",
+        "          1.90000000e+03],\n",
+        "       [  1.20000000e+10,   1.00000000e+10,   1.20000000e+10,\n",
+        "          1.00000000e+10,   3.80000000e+09,   3.80000000e+09,\n",
+        "          5.00000000e-01,   2.80000000e-01,   2.80000000e-01,\n",
+        "          1.89000000e+03],\n",
+        "       [  2.00000000e+10,   1.00000000e+10,   1.00000000e+10,\n",
+        "          7.50000000e+09,   4.00000000e+09,   4.00000000e+09,\n",
+        "          5.00000000e-01,   2.80000000e-01,   2.80000000e-01,\n",
+        "          1.86000000e+03],\n",
+        "       [  5.00000000e+07,   5.00000000e+07,   5.00000000e+07,\n",
+        "          1.78570000e+07,   1.78570000e+07,   1.78570000e+07,\n",
+        "          4.00000000e-01,   4.00000000e-01,   4.00000000e-01,\n",
+        "          8.00000000e+01]])"
+       ]
+      }
+     ],
+     "prompt_number": 41
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Or if you think that's too much of hasle, you could try to use the Octave to Python bridge"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from oct2py import octave\n",
+      "# short hand notation\n",
+      "oc = octave.run\n",
+      "oc(\"load('utils.mat')\")\n",
+      "oc(\"load('constitutive.mat')\")\n",
+      "utils        = octave.get('utils')\n",
+      "constitutive = octave.get('constitutive')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 42
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "utils['matprops']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 46,
+       "text": [
+        "array([[  4.00000000e+10,   1.00000000e+10,   1.00000000e+10,\n",
+        "          4.00000000e+09,   4.00000000e+09,   3.57100000e+09,\n",
+        "          2.80000000e-01,   2.80000000e-01,   4.00000000e-01,\n",
+        "          1.90000000e+03],\n",
+        "       [  1.20000000e+10,   1.00000000e+10,   1.20000000e+10,\n",
+        "          1.00000000e+10,   3.80000000e+09,   3.80000000e+09,\n",
+        "          5.00000000e-01,   2.80000000e-01,   2.80000000e-01,\n",
+        "          1.89000000e+03],\n",
+        "       [  2.00000000e+10,   1.00000000e+10,   1.00000000e+10,\n",
+        "          7.50000000e+09,   4.00000000e+09,   4.00000000e+09,\n",
+        "          5.00000000e-01,   2.80000000e-01,   2.80000000e-01,\n",
+        "          1.86000000e+03],\n",
+        "       [  5.00000000e+07,   5.00000000e+07,   5.00000000e+07,\n",
+        "          1.78570000e+07,   1.78570000e+07,   1.78570000e+07,\n",
+        "          4.00000000e-01,   4.00000000e-01,   4.00000000e-01,\n",
+        "          8.00000000e+01]])"
+       ]
+      }
+     ],
+     "prompt_number": 46
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
