--- a/lesson 2/how-to-numpy.ipynb
+++ b/lesson 2/how-to-numpy.ipynb
@@ -120,7 +120,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -137,12 +137,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-8-d051637b9365>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-4-d051637b9365>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[1;31mTypeError\u001b[0m: only length-1 arrays can be converted to Python scalars"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -203,7 +203,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 32,
+       "prompt_number": 5,
        "text": [
         "array([[11, 12, 13],\n",
         "       [21, 22, 23],\n",
@@ -211,7 +211,7 @@
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -229,8 +229,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 24
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -249,8 +248,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 30
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -260,17 +258,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 31,
-       "text": [
-        "[0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 4, 0, 1, 2, 3, 4]"
-       ]
-      }
-     ],
-     "prompt_number": 31
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -291,32 +279,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "1000 loops, best of 3: 323 \u00b5s per loop\n",
-        "100000 loops, best of 3: 4.92 \u00b5s per loop"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n"
-       ]
-      },
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 29,
-       "text": [
-        "65"
-       ]
-      }
-     ],
-     "prompt_number": 29
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -337,7 +300,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 6,
        "text": [
         "array([[ 1.,  1.,  1.,  1.],\n",
         "       [ 1.,  1.,  1.,  1.],\n",
@@ -347,7 +310,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -361,7 +324,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 7,
        "text": [
         "array([[1, 0, 0, 0],\n",
         "       [0, 2, 0, 0],\n",
@@ -370,7 +333,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -382,11 +345,25 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "a = np.arange(11)\n",
+      "a\n",
+      "a[-1]\n",
+      "a[2:9]"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 19
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "array([2, 3, 4, 5, 6, 7, 8])"
+       ]
+      }
+     ],
+     "prompt_number": 11
     },
     {
      "cell_type": "heading",
@@ -421,7 +398,7 @@
       "a1 = np.array([[111,121],[211,221]])\n",
       "print a1\n",
       "a2 = np.array([[112, 122],[212,222]])\n",
-      "print a2\n"
+      "print a2"
      ],
      "language": "python",
      "metadata": {},
@@ -432,19 +409,12 @@
        "text": [
         "[[111 121]\n",
         " [211 221]]\n",
-        "[[111 121]\n",
-        " [211 221]]\n",
-        "[[[ True  True]\n",
-        "  [ True  True]]\n",
-        "\n",
-        " [[ True  True]\n",
-        "  [ True  True]]]\n",
-        "211\n",
-        "<type 'numpy.ndarray'>\n"
+        "[[112 122]\n",
+        " [212 222]]\n"
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -457,11 +427,26 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "a3 = np.dstack((a1, a2))"
+      "a3 = np.dstack((a1, a2))\n",
+      "a3"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 15,
+       "text": [
+        "array([[[111, 112],\n",
+        "        [121, 122]],\n",
+        "\n",
+        "       [[211, 212],\n",
+        "        [221, 222]]])"
+       ]
+      }
+     ],
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -472,7 +457,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -483,7 +469,21 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[[[ True  True]\n",
+        "  [ True  True]]\n",
+        "\n",
+        " [[ True  True]\n",
+        "  [ True  True]]]\n",
+        "211\n"
+       ]
+      }
+     ],
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -527,13 +527,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 25,
+       "prompt_number": 19,
        "text": [
         "(1000, 2000, 50)"
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -557,12 +557,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-26-abfc4537a455>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0maaijk1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maa\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-20-abfc4537a455>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0maaijk1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maa\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[1;31mValueError\u001b[0m: shape mismatch: objects cannot be broadcast to a single shape"
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -591,7 +591,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -621,7 +622,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -644,7 +645,42 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "method 1: fancy indexing for each dimension seperately\n",
+        "10 loops, best of 3: 74.3 ms per loop"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "method 2: slicing\n",
+        "1000 loops, best of 3: 312 \u00b5s per loop"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "method 3: fancy indexing\n",
+        "1000 loops, best of 3: 1.58 ms per loop"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 23
     },
     {
      "cell_type": "markdown",
@@ -676,7 +712,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
@@ -693,26 +729,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 15,
-       "text": [
-        "array([[ 0.58951463,  0.25364097,  0.22872002,  0.50496593,  0.63408619],\n",
-        "       [ 0.94506257,  0.58750057,  0.60338287,  0.23230774,  0.6832449 ],\n",
-        "       [ 0.44313992,  0.26718261,  0.89882027,  0.89599165,  0.05243552],\n",
-        "       [ 0.60607946,  0.02249345,  0.41245453,  0.37303377,  0.76568748],\n",
-        "       [ 0.03469898,  0.21175471,  0.96323066,  0.39655602,  0.6500778 ],\n",
-        "       [ 0.74975727,  0.10758864,  0.81351876,  0.56340434,  0.89108878],\n",
-        "       [ 0.73585457,  0.86550601,  0.87664468,  0.7487025 ,  0.02304955],\n",
-        "       [ 0.3630177 ,  0.2815981 ,  0.9985682 ,  0.25157408,  0.10956538],\n",
-        "       [ 0.09280795,  0.64685929,  0.85697407,  0.77609291,  0.56018828],\n",
-        "       [ 0.19499422,  0.96372241,  0.62658103,  0.92424868,  0.39157309]])"
-       ]
-      }
-     ],
-     "prompt_number": 15
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -726,7 +743,8 @@
      "collapsed": false,
      "input": [
       "fname = 'fixedwidth'\n",
-      "data1 = np.genfromtxt(fname, dtype=None, delimiter=',', comments='#', skiprows=0, skip_header=0, skip_footer=0)\n",
+      "data1 = np.genfromtxt(fname, dtype=None, delimiter=',', comments='#', skiprows=0, \n",
+      "                      skip_header=0, skip_footer=0)\n",
       "print data1.shape\n",
       "data1[0]"
      ],
@@ -743,19 +761,20 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 27,
+       "prompt_number": 26,
        "text": [
         "'0.0  1.00000e-02          0.0          0.0  7.50000e-07  7.50000e-07          0.0          0.0  1.00000e+12  2.00000e+12  6.75000e-08  6.75000e-08  1.35000e-07   100.000000   100.000000  9.00000e-04          0.0          0.0          0.0'"
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "data2 = np.genfromtxt(fname, dtype=np.float16, delimiter=13, comments='#', skiprows=0, skip_header=0, skip_footer=0)\n",
+      "data2 = np.genfromtxt(fname, dtype=np.float32, delimiter=13, comments='#', \n",
+      "                      skiprows=0, skip_header=0, skip_footer=0)\n",
       "print data2.shape\n",
       "data2[:,0]"
      ],
@@ -772,16 +791,16 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 28,
+       "prompt_number": 27,
        "text": [
-        "array([ 0.        ,  0.16186523,  0.1619873 ,  0.19470215,  0.22729492,\n",
-        "        0.26000977,  0.29248047,  0.32519531,  0.35791016,  0.390625  ,\n",
-        "        0.4230957 ,  0.45581055,  0.48852539,  0.52099609,  0.55371094,\n",
-        "        0.58642578,  0.61914062,  0.65185547,  0.68457031,  0.71679688], dtype=float16)"
+        "array([ 0.        ,  0.1619    ,  0.162     ,  0.194647  ,  0.227294  ,\n",
+        "        0.25994101,  0.292588  ,  0.32523501,  0.35788199,  0.39052901,\n",
+        "        0.42317599,  0.45582399,  0.488471  ,  0.52111799,  0.553765  ,\n",
+        "        0.58641201,  0.61905903,  0.65170598,  0.68435299,  0.71700001], dtype=float32)"
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -822,17 +841,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 31,
-       "text": [
-        "dict"
-       ]
-      }
-     ],
-     "prompt_number": 31
+     "outputs": [],
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
@@ -846,13 +856,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 32,
+       "prompt_number": 29,
        "text": [
         "['utils', '__version__', '__header__', '__globals__']"
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
@@ -866,13 +876,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 36,
+       "prompt_number": 30,
        "text": [
         "dtype([('foldername', 'O'), ('nl_2d', 'O'), ('el_2d', 'O'), ('emat', 'O'), ('matprops', 'O'), ('ne_2d', 'O'), ('nn_2d', 'O'), ('etype_string', 'O'), ('etype', 'O'), ('nnpe_2d', 'O'), ('mdim_2d', 'O'), ('gpoints', 'O'), ('ndiv', 'O'), ('mapnn', 'O'), ('mapel_2d', 'O'), ('mapel4mat', 'O'), ('nmat', 'O'), ('pr_2d', 'O'), ('ElCent', 'O'), ('ElArea', 'O'), ('GQ', 'O'), ('iQ', 'O'), ('jQ', 'O'), ('vQ', 'O'), ('iQm', 'O'), ('jQm', 'O'), ('vQm', 'O'), ('density', 'O')])"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -886,14 +896,14 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 39,
+       "prompt_number": 31,
        "text": [
         "array([u'BECAS_examples/WTAirfoil'], \n",
         "      dtype='<U24')"
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -907,7 +917,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 41,
+       "prompt_number": 32,
        "text": [
         "array([[  4.00000000e+10,   1.00000000e+10,   1.00000000e+10,\n",
         "          4.00000000e+09,   4.00000000e+09,   3.57100000e+09,\n",
@@ -928,7 +938,7 @@
        ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 32
     },
     {
      "cell_type": "markdown",
@@ -951,8 +961,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 42
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -962,32 +971,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 46,
-       "text": [
-        "array([[  4.00000000e+10,   1.00000000e+10,   1.00000000e+10,\n",
-        "          4.00000000e+09,   4.00000000e+09,   3.57100000e+09,\n",
-        "          2.80000000e-01,   2.80000000e-01,   4.00000000e-01,\n",
-        "          1.90000000e+03],\n",
-        "       [  1.20000000e+10,   1.00000000e+10,   1.20000000e+10,\n",
-        "          1.00000000e+10,   3.80000000e+09,   3.80000000e+09,\n",
-        "          5.00000000e-01,   2.80000000e-01,   2.80000000e-01,\n",
-        "          1.89000000e+03],\n",
-        "       [  2.00000000e+10,   1.00000000e+10,   1.00000000e+10,\n",
-        "          7.50000000e+09,   4.00000000e+09,   4.00000000e+09,\n",
-        "          5.00000000e-01,   2.80000000e-01,   2.80000000e-01,\n",
-        "          1.86000000e+03],\n",
-        "       [  5.00000000e+07,   5.00000000e+07,   5.00000000e+07,\n",
-        "          1.78570000e+07,   1.78570000e+07,   1.78570000e+07,\n",
-        "          4.00000000e-01,   4.00000000e-01,   4.00000000e-01,\n",
-        "          8.00000000e+01]])"
-       ]
-      }
-     ],
-     "prompt_number": 46
+     "outputs": []
     },
     {
      "cell_type": "code",
