--- a/lesson 2/how-to-numpy.ipynb
+++ b/lesson 2/how-to-numpy.ipynb
@@ -203,7 +203,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 6,
        "text": [
         "array([[11, 12, 13],\n",
         "       [21, 22, 23],\n",
@@ -211,7 +211,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -225,11 +225,13 @@
      "collapsed": false,
      "input": [
       "L = range(5) # a Python list\n",
-      "a = np.arange(5) # a NumPy array"
+      "a = np.arange(5) # a NumPy array\n",
+      "b = 2"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -488,10 +490,24 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "plot(range10)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "name 'plot' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-7-7dc7c602c80d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mNameError\u001b[0m: name 'plot' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
