adding more tips on plotting

--- a/lesson 3/plotting-introduction-exercise.ipynb
+++ b/lesson 3/plotting-introduction-exercise.ipynb
@@ -48,7 +48,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -76,11 +77,21 @@
       "# activate pop up plots\n",
       "#%matplotlib qt\n",
       "# or change to inline plots\n",
-      "%matplotlib inline"
+      "#%matplotlib inline\n",
+      "%matplotlib"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Using matplotlib backend: Qt4Agg\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -167,7 +178,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -190,11 +202,12 @@
       "plt.rc('axes', labelsize=20)  # axes labels\n",
       "# If you don\u2019t need LaTeX, don\u2019t use it. It is slower to plot, and text\n",
       "# looks just fine without. If you need it, e.g. for symbols, then use it.\n",
-      "#plt.rc('text', usetex=True) #<- P-E: Doesn't work on my Mac"
+      "plt.rc('text', usetex=True) #<- P-E: Doesn't work on my Mac"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -214,7 +227,7 @@
       "\n",
       "# axes labels\n",
       "ax.set_xlabel('xlabel 12')\n",
-      "ax.set_ylabel(r'$y_{\\alpha}$ 12', fontsize=8)\n",
+      "ax.set_ylabel(r'$y_{\\alpha}$ 12')\n",
       "\n",
       "# legend\n",
       "ax.legend(fontsize=12, loc=\"best\")\n",
@@ -226,7 +239,20 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 7
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ax.grid(True)\n",
+      "fig.canvas.draw()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
