adding the ipython inline_slide capability to the slide_generator

--- a/slide_generator/template/article_template.tex
+++ b/slide_generator/template/article_template.tex
@@ -1,6 +1,7 @@
 
 
-\documentclass[times]{weauth}
+\documentclass[times]{article}
+%%%\documentclass[times]{weauth}
 \usepackage[english]{babel}
 \usepackage{psfrag,pstricks}
 \usepackage{graphicx} 
@@ -26,20 +27,21 @@ T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \renewcommand*\familydefault{\sfdefault}
 \usepackage{textcomp}
 \makenomenclature 
+
 \begin{document}
-\runningheads{#running_heads1#}{#running_heads2#}
-\articletype{RESEARCH ARTICLE}
+%\runningheads{#running_heads1#}{#running_heads2#}
+%\articletype{RESEARCH ARTICLE}
 \title{#title#}
-%\itshape{\journalnamelc}\footnotemark[2]}
+%%\itshape{\journalnamelc}\footnotemark[2]}
 \author{#author#}
-\address{#address#}
-\corraddr{#coaddress#}
+%\address{#address#}
+%\corraddr{#coaddress#}
 
 \begin{abstract}
 #abstract#
 \end{abstract}
 
-\keywords{#keywords#}
+%\keywords{#keywords#}
 \maketitle
 
 %%%%%%%%%%%%%%%%%% Main Document %%%%%%%%%%%%%%%%%%%%%
