--- a/slide_generator/template/DTUtemplatedocument.tex
+++ b/slide_generator/template/DTUtemplatedocument.tex
@@ -66,3 +66,11 @@
   \titlepage
 \end{frame}
 }
+
+\AtBeginSection[]
+{
+  \begin{frame}
+    \frametitle{Table of Contents}
+    \tableofcontents[currentsection]
+  \end{frame}
+}
